--- a/webpack_demo/3-9/src/css/base.css
+++ b/webpack_demo/3-9/src/css/base.css
@@ -1,3 +1,10 @@
 html {
     background: greenyellow;
 }
+
+.box{
+    composes: bigBox from './common.css';
+    width: 200px;
+    height: 200px;
+    background: red;
+}
