--- a/webpack_demo/3-9/src/css/common.css
+++ b/webpack_demo/3-9/src/css/common.css
@@ -6,3 +6,15 @@ body{
     font-size: 20px;
     color: blue;
 }
+
+.name{
+    width: calc(100% - 75px);
+}
+
+:root {
+    --mainColor: red;
+}
+
+a {
+    color: var(--mainColor);
+}
